学乐乐静态页面

--- a/application/index/view/xllfd/admin.html
+++ b/application/index/view/xllfd/admin.html
@@ -2,9 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>学乐乐、樊登场</title>
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/static/css/admin.css">
+    <script  src="/static/js/jquery.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/admin.js"></script>
 </head>
 <body>
-   后台管理页面
+<div style="width: 80%;float: left;margin-left: 2%;margin-top: 2%;" class="box">
+    <pre class="notSignin">签到未领取礼物</pre>
+    <table class="notpull table table-striped">
+        <tr>
+            <td class="active">序号</td>
+            <td class="active">姓名</td>
+            <td class="active">手机号</td>
+            <td class="active">来源</td>
+            <td class="active">操作</td>
+        </tr>
+    </table>
+    <table class="notsin table table-striped">
+        
+    </table>
+</div>
+<div style="width: 15%;float: right;margin-right:2%;margin-top: 2%;" class="notenroll">
+    <pre class="gift">未报名</pre>
+    <table class="enlist table table-striped">
+       
+    </table>
+</div>
+<div style="width: 80%;margin-top: 30px;float: left;margin-left: 2%" class="box">
+    <pre class="notSignin">签到已领取礼物</pre>
+    <table class="notpull table table-striped">
+        <tr>
+            <td class="active">序号</td>
+            <td class="active">姓名</td>
+            <td class="active">手机号</td>
+            <td class="active">来源</td>
+        </tr>
+    </table>
+    <table class="trbute table table-striped">
+        
+    </table>
+</div>
 </body>
 </html>
