--- a/application/index/view/xllfd/sign.html
+++ b/application/index/view/xllfd/sign.html
@@ -1,10 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    
+    <title>学乐乐</title>
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/index.css">
+    <script type="text/javascript" src="/static/lib-flexible/build/flexible.js"></script>
 </head>
 <body>
-        这是签到页面
+    <div class="gather">
+        <div class="learn">
+            <img src="/static/img/back.jpg" alt="">
+            <input name="" class="case" type="number"   placeholder="请输入手机号">
+            <button id="signChack">签到</button>
+        </div>
+        <div class="mask">
+            <div class="mallmask">
+                <p class="mallmask2"></p>
+            </div>
+        </div>
+    </div>
+<script src="/static/js/jquery.js"></script>
+<script src="/static/js/index.js"></script>
 </body>
 </html>
