--- a/application/index/view/xllfd/admin.html
+++ b/application/index/view/xllfd/admin.html
@@ -12,7 +12,7 @@
     <script src="/static/js/admin.js"></script>
 </head>
 <body>
-<div style="width: 80%;float: left;margin-left: 2%;margin-top: 2%;" class="box">
+<div  class="box giving">
     <pre class="notSignin">签到未领取礼物</pre>
     <table class="notpull table table-striped">
         <tr>
@@ -24,16 +24,16 @@
         </tr>
     </table>
     <table class="notsin table table-striped">
-        
+    <!--  -->
     </table>
 </div>
-<div style="width: 15%;float: right;margin-right:2%;margin-top: 2%;" class="notenroll">
+<div class="notenroll">
     <pre class="gift">未报名</pre>
     <table class="enlist table table-striped">
-       
+       <!--  -->
     </table>
 </div>
-<div style="width: 80%;margin-top: 30px;float: left;margin-left: 2%" class="box">
+<div class="box giv">
     <pre class="notSignin">签到已领取礼物</pre>
     <table class="notpull table table-striped">
         <tr>
@@ -44,7 +44,7 @@
         </tr>
     </table>
     <table class="trbute table table-striped">
-        
+        <!--  -->
     </table>
 </div>
 </body>
