--- a/public/static/css/admin.css
+++ b/public/static/css/admin.css
@@ -8,35 +8,58 @@
 .box::-webkit-scrollbar {
     display: none;
 }
+.giving{
+    width: 80%;
+    float: left;
+    margin-left: 2%;
+    margin-top: 2%;
+}
+.notSignin{
+    width: 80%;
+    position: absolute;
+}
 tr>th{
     text-align: center;
 }
-.gift{
-    text-align: center;
-    position: fixed;
-    width: 15%;
-}
-.notSignin{
-    position: fixed;
+/* 左下 */
+.giv{
     width: 80%;
+    margin-top: 30px;
+    float: left;
+    margin-left: 2%
 }
-.table{
+.notpull{
     margin-top: 40px;
+    width: 80%;
+    position: absolute;
 }
 .notenroll{
     height: 810px;
     overflow-x: hidden;
     overflow-y: scroll;
+    width: 15%;
+    float: right;
+    margin-right:2%;
+    margin-top: 2%;
+    padding-top: 10px;
 }
 .notenroll::-webkit-scrollbar {
     display: none;
 }
+.gift{
+    text-align: center;
+    width: 15%;
+    position: absolute;
+    margin-top: -10px;
+}
+
+.enlist{
+    margin-top: 32px;
+}
 .box .notsin{
-    margin-top: -20px;
+    margin-top: 77px;
 }
-.notpull{
-    margin-top: 40px;
-}
+
 .table>tbody>tr>.thont:nth-child(1){
         width: 18%;
 }
@@ -51,6 +74,6 @@ tr>th{
 }
 /* 第二个 */
 .box .trbute{
-    margin-top: -20px;
+    margin-top: 77px;
 }
 /* 未报名 */
