--- a/public/static/css/index.css
+++ b/public/static/css/index.css
@@ -14,7 +14,6 @@ html,body {
     height: 17.786667rem;
     position: relative;
 }
-
 .gather .learn img{
      width: 100%;
      height: 17.786667rem;
@@ -64,7 +63,7 @@ html,body {
     line-height: 0.6rem;
     background: #484747;
     font-size: 0.45rem;
-    padding: 0.3rem 0.5rem;
+    /* padding: 0.3rem 0.5rem; */
     border-radius: 5rem;
     color: #ffffff;
     display: none;
