--- a/application/index/view/xllfd/sign.html
+++ b/application/index/view/xllfd/sign.html
@@ -10,7 +10,7 @@
 <body>
     <div class="gather">
         <div class="learn">
-            <img src="/static/img/back.jpg" alt="">
+            <img src="/static/img/back.jpg" onclick="return false;"/ alt="">
             <input name="" class="case" type="number"   placeholder="请输入手机号">
             <button id="signChack">签到</button>
         </div>
