--- a/application/index/view/xllfd/sign.html
+++ b/application/index/view/xllfd/sign.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>学乐乐</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="/static/lib-flexible/build/flexible.css">
     <script type="text/javascript" src="/static/lib-flexible/build/flexible.js"></script>
 </head>
 <body>
     <div class="gather">
         <div class="learn">
+            <img src="/static/img/back.jpg" alt="">
             <input name="" class="case" type="number"   placeholder="请输入手机号">
             <button id="signChack">签到</button>
         </div>
