--- a/public/static/css/index.css
+++ b/public/static/css/index.css
@@ -2,32 +2,42 @@ html,body {
     font-family:  "Microsoft Yahei";
     width: 100%;
     height: 100%;
-    position: fixed;
-    background-image : url('/static/img/back.jpg');
+    background: #e6bb1f;
+}
+.gather{
+    width: 100%;
+    height: 100%;
+    /* background-image : url('');
     background-repeat: no-repeat;
     background-position: 0px 0px;
     background-size: 100% 100%;
-    
-}
-.gather{
-    position:relative;
+    position: fixed;
+    top: 0;
+    left: 0; */
 }
 .gather .learn {
     position: relative;
+}
+.gather .learn img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    vertical-align: sub;
 }
 .gather .learn .case{
     width: 8rem;
     height: 1rem /* 70/75 */;
     background: #ffffff;
-    position: fixed;
-    top:80%;
-    left:10%;
-    /* top: 83%;
-    left: 50%; */
-    /* transform:translate(-50%, -50%);
+    position: absolute;
+    /* top:80%;
+    left:10%; */
+    top: 81%;
+    left: 50%; 
+    transform:translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%); */
+    -webkit-transform: translate(-50%, -50%);
     border: 1px solid #fee347;
     border-radius: 0.4rem;
     font-size: .4rem /* 30/75 */;
@@ -41,15 +51,15 @@ html,body {
     cursor: pointer;
     width: 3rem;
     height: 1.013333rem /* 76/75 */;
-    position: fixed;
-    top:88%; 
-    left:35%;
-    /* top: 91%;
-    left: 50%; */
-    /* transform:translate(-50%, -50%);
+    position: absolute;
+    /* top:88%; 
+    left:35%; */
+    top: 89%;
+    left: 50%;
+    transform:translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%); */
+    -webkit-transform: translate(-50%, -50%);
     border-radius: .6rem;
     border: 1px solid #fee347;
     font-size: .426667rem;
